# Stuff

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  conanfile.py  main.cpp  readme.md
common/: schedule.hpp  utils.hpp  worker.hpp
stuff/: thing.hpp
stuff/R216/bfcompiler/: bfcompiler.asm
stuff/R316/old/: debugLookup.sh  labels  main.asm
stuff/R316/old/lib/: common.asm  config.asm  datastack.asm  limits.asm  stdlib.asm  string.asm
stuff/R316/old/lib/gfx/: cga.asm  screen.asm
stuff/R316/old/lib/stdlib/: conv.asm  env.asm  malloc.asm  rand.asm
stuff/R316/old/lib/string/: copy.asm  other.asm
stuff/kmeans/: kmeans.hpp
